deploy.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: perfscale-demo-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perfscale-demo-app
  namespace: perfscale-demo-app
spec:
  selector:
    matchLabels:
      app: perfscale-demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: perfscale-demo-app
    spec:
      containers:
        - name: perfscale-demo-app
          image: quay.io/rhcloudperfscale/perfscale-demo-app:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 256Mi
              cpu: 250m
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: perfscale-demo-service
  namespace: perfscale-demo-app
spec:
  selector:
    app: perfscale-demo-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: perfscale-demo-route
  namespace: perfscale-demo-app
spec:
  path: /
  to:
    kind: Service
    name: perfscale-demo-service
  port:
    targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql
  namespace: perfscale-demo-app
spec:
  ports:
    - name: postgresql
      port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    name: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql
  namespace: perfscale-demo-app
spec:
  selector:
    matchLabels:
      name: postgresql
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: postgresql
    spec:
      containers:
        - name: postgresql
          image: 'quay.io/centos7/postgresql-13-centos7'
          ports:
            - containerPort: 5432
              protocol: TCP
          volumeMounts:
            - mountPath: /var/lib/pgsql/data
              name: postgresql-data
          resources:
            requests:
              memory: 256Mi
              cpu: 250m
            limits:
              memory: 256Mi
              cpu: 250m
      volumes:
        - name: postgresql-data
          persistentVolumeClaim:
            claimName: postgresql
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: testing
  namespace: perfscale-demo-app
spec:
  selector:
    matchLabels:
      app: testing
  replicas: 1
  template:
    metadata:
      labels:
        app: testing
    spec:
      containers:
        - name: perfscale-demo-app
          image: quay.io/rhcloudperfscale/perfscale-demo-app-testing:latest
          imagePullPolicy: Always
          command:
            - sleep
            - infinity
###---
###apiVersion: batch/v1
###kind: Job
###metadata:
###  name: testing-job
###  namespace: perfscale-demo-app
###spec:
###  selector: {}
###  template:
###    metadata:
###      name: testing-job
###    spec:
###      containers:
###        - name: testing-job
###          image: quay.io/rhcloudperfscale/perfscale-demo-app-testing:latest
###          command:
###            - locust
###            - --locustfile=testing.py
###            - --headless
###            - -H=http://perfscale-demo-service.perfscale-demo-app.svc:80
###            - --users=1
###            - --spawn-rate=1
###            - --run-time=3
###            - --print-stats
###      restartPolicy: Never
